--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,8 @@
         "project": ["tsconfig.json"]
     },
     "rules": {
-        "@typescript-eslint/unbound-method": "off"
+        "@typescript-eslint/unbound-method": "off",
+        "@typescript-eslint/no-explicit-any": "off",
+        "@typescript-eslint/no-unsafe-member-access": "off"
     }
 }
