update to latest version

--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
         "@tanstack/react-query-devtools": "^5.90.2",
         "@zenstackhq/orm": "next",
         "@zenstackhq/plugin-policy": "next",
-        "@zenstackhq/server": "^3.0.0-beta.18",
-        "@zenstackhq/tanstack-query": "^3.0.0-beta.18",
+        "@zenstackhq/server": "next",
+        "@zenstackhq/tanstack-query": "next",
         "babel-plugin-superjson-next": "^0.4.5",
         "bcryptjs": "^2.4.3",
         "daisyui": "^4.0.7",
