update to latest zenstack

--- a/package.json
+++ b/package.json
@@ -14,19 +14,19 @@
         "db:reset": "zen migrate reset",
         "generate": "zen generate --lite",
         "vercel-build": "npm run build && npm run db:deploy",
-        "package-clean": "npm rm zenstack @zenstackhq/runtime @zenstackhq/server @zenstackhq/tanstack-query",
-        "up": "npm run package-clean && npm install -D @zenstackhq/cli@next && npm install @zenstackhq/runtime@next @zenstackhq/server@next @zenstackhq/tanstack-query@next",
-        "up-preview": "npm run package-clean && npm install --registry https://preview.registry.zenstack.dev -D @zenstackhq/cli@next && npm install --registry https://preview.registry.zenstack.dev @zenstackhq/runtime@next @zenstackhq/server@next @zenstackhq/tanstack-query@next"
+        "package-clean": "npm rm zenstack @zenstackhq/orm @zenstackhq/server @zenstackhq/tanstack-query",
+        "up": "npm run package-clean && npm install -D @zenstackhq/cli@next && npm install @zenstackhq/orm@next @zenstackhq/server@next @zenstackhq/tanstack-query@next",
+        "up-preview": "npm run package-clean && npm install --registry https://preview.registry.zenstack.dev -D @zenstackhq/cli@next && npm install --registry https://preview.registry.zenstack.dev @zenstackhq/orm@next @zenstackhq/server@next @zenstackhq/tanstack-query@next"
     },
     "dependencies": {
         "@auth/prisma-adapter": "^2.7.4",
         "@heroicons/react": "^2.0.12",
         "@tanstack/react-query": "^5.90.5",
         "@tanstack/react-query-devtools": "^5.90.2",
-        "@zenstackhq/orm": "next",
+        "@zenstackhq/orm": "^3.0.0-beta.22",
         "@zenstackhq/plugin-policy": "next",
-        "@zenstackhq/server": "next",
-        "@zenstackhq/tanstack-query": "next",
+        "@zenstackhq/server": "^3.0.0-beta.22",
+        "@zenstackhq/tanstack-query": "^3.0.0-beta.22",
         "babel-plugin-superjson-next": "^0.4.5",
         "bcryptjs": "^2.4.3",
         "daisyui": "^4.0.7",
@@ -50,7 +50,7 @@
         "@types/react-dom": "^18.2.0",
         "@typescript-eslint/eslint-plugin": "^6.13.1",
         "@typescript-eslint/parser": "^6.13.1",
-        "@zenstackhq/cli": "next",
+        "@zenstackhq/cli": "^3.0.0-beta.22",
         "autoprefixer": "^10.4.20",
         "eslint": "^7.32.0",
         "eslint-config-next": "12.3.1",
