--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
         "db:reset": "zen migrate reset",
         "generate": "zen generate --lite",
         "vercel-build": "npm run build && npm run db:deploy",
-        "package-clean": "npm rm zenstack @zenstackhq/orm @zenstackhq/server @zenstackhq/tanstack-query",
-        "up": "npm run package-clean && npm install -D @zenstackhq/cli@next && npm install @zenstackhq/orm@next @zenstackhq/server@next @zenstackhq/tanstack-query@next",
-        "up-preview": "npm run package-clean && npm install --registry https://preview.registry.zenstack.dev -D @zenstackhq/cli@next && npm install --registry https://preview.registry.zenstack.dev @zenstackhq/orm@next @zenstackhq/server@next @zenstackhq/tanstack-query@next"
+        "package-clean": "npm rm zenstack @zenstackhq/orm @zenstackhq/server @zenstackhq/tanstack-query @zenstackhq/plugin-policy",
+        "up": "npm run package-clean && npm install -D @zenstackhq/cli@next && npm install @zenstackhq/orm@next @zenstackhq/server@next @zenstackhq/tanstack-query@next @zenstackhq/plugin-policy@next",
+        "up-preview": "npm run package-clean && npm install --registry https://preview.registry.zenstack.dev -D @zenstackhq/cli@next && npm install --registry https://preview.registry.zenstack.dev @zenstackhq/orm@next @zenstackhq/server@next @zenstackhq/tanstack-query@next @zenstackhq/plugin-policy@next"
     },
     "dependencies": {
         "@auth/prisma-adapter": "^2.7.4",
@@ -24,7 +24,7 @@
         "@tanstack/react-query": "^5.90.5",
         "@tanstack/react-query-devtools": "^5.90.2",
         "@zenstackhq/orm": "^3.0.0-beta.22",
-        "@zenstackhq/plugin-policy": "next",
+        "@zenstackhq/plugin-policy": "^3.0.0-beta.22",
         "@zenstackhq/server": "^3.0.0-beta.22",
         "@zenstackhq/tanstack-query": "^3.0.0-beta.22",
         "babel-plugin-superjson-next": "^0.4.5",
