--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
     "type": "module",
     "scripts": {
         "dev": "next dev",
-        "build": "npm run generate && npm run lint && next build",
+        "build": "npm run generate && next build",
         "start": "next start",
-        "lint": "next lint",
         "db:push": "zen db push",
         "db:migrate": "zen migrate dev",
         "db:deploy": "zen migrate deploy",
@@ -23,17 +22,17 @@
         "@heroicons/react": "^2.0.12",
         "@tanstack/react-query": "^5.90.5",
         "@tanstack/react-query-devtools": "^5.90.2",
-        "@zenstackhq/orm": "^3.0.0-beta.25",
-        "@zenstackhq/plugin-policy": "^3.0.0-beta.25",
-        "@zenstackhq/server": "^3.0.0-beta.25",
-        "@zenstackhq/tanstack-query": "^3.0.0-beta.25",
+        "@zenstackhq/orm": "^3.0.0-beta.29",
+        "@zenstackhq/plugin-policy": "^3.0.0-beta.29",
+        "@zenstackhq/server": "^3.0.0-beta.29",
+        "@zenstackhq/tanstack-query": "^3.0.0-beta.29",
         "babel-plugin-superjson-next": "^0.4.5",
         "bcryptjs": "^2.4.3",
         "daisyui": "^4.0.7",
         "decimal.js": "^10.4.3",
         "moment": "^2.29.4",
         "nanoid": "^4.0.0",
-        "next": "^15.0.3",
+        "next": "^15.5.9",
         "next-auth": "^5.0.0-beta.25",
         "pg": "^8.16.3",
         "react": "^18.2.0",
@@ -50,7 +49,7 @@
         "@types/react-dom": "^18.2.0",
         "@typescript-eslint/eslint-plugin": "^6.13.1",
         "@typescript-eslint/parser": "^6.13.1",
-        "@zenstackhq/cli": "^3.0.0-beta.25",
+        "@zenstackhq/cli": "^3.0.0-beta.29",
         "autoprefixer": "^10.4.20",
         "eslint": "^7.32.0",
         "eslint-config-next": "12.3.1",
